# cowack_device

./: .cproject  .project  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  adxl345.c  adxl345.h  bat.c  bat.h  device.c  gps.c  gps.h  leds.c  leds.h  lora.c  main.c  mic.c  mic.h  nmea_parser.h  pwr.c  pwr.h
