idf_component_register(
	SRCS 			"adxl345.c"
	                "bat.c"	                
	                "device.c"
                    "gps.c"
                    "nmea_parser.c"
	                "leds.c"
                    "lora.c"
                    "mic.c"
                    "pwr.c"
	                "main.c"
	                "nvs_application.c"
                    "sx1278.c"
)
